docs(handoff): extend prior handoff and add program handoff
Prior handoff gains the Tier-2 (TASK_2/3/4) appendix; new handoff captures Phase D closure and the full planned program tracked in PRD #1 / issues #2-#22.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>